# SDT

./: Adamus Commentary.txt  Additional Rules.md  Advanced User Guide to Suno v5_ High-Quality SDT Generation.docx  Alethe (Field-State Dialect).docx  All Imprints.md  Koor Kesh'Fin'Thal imprint.txt  Primer Addendum_ Silent Lexicon (SDT-SL).docx  SDL - Synthetic Description Layer.md  SDT_Primer.md  Sleep Meditation Track Design (Subsurface SDT).docx  Synthesizer Gear.md  Translations.md  koor_fin_thal_imprint.md  koor_no_fin_imprint.md  synthetic_dragon_tongue_language_primer_v_0.md  voilvoic imprint.txt  zeiin_vahdrim_imprint.md
Aurora/: .gitignore  CLICK.md  CMakeLists.txt  README.md  add-aurora-to-path.sh  aurora_requirements_v_1.md  build.sh
Aurora/au/: obsidian-spire.au  twinkle_epic.au
Aurora/doc/: analyzer-requirements.md  au_language_spec.md  aurora_code_review_report.md  aurora_requirements_v_1.md  control_smoother.md  import_namespace_requirements.md  roland_100m_parity_roadmap.md  spectro_composite.md  spectro_profiles.md  spectrogram_spec.md  stereo_pan.md
Aurora/examples/: canonical_v1.au
Aurora/tests/: aurora_drumkit_example.au  aurora_flash_showcase.au  binaural_modulation.au  canonical_root_gate.au  chord_polyphony.au  fx_stereo_bus.au  looping_structural.au  m1_cv_chain.au  m1_cv_clip_curve.au  m1_cv_nodes_trigger.au  m1_invalid_audio_to_control.au  m1_invalid_control_to_audio.au  m1_trigger_defaults.au  m2_env_modes.au  m2_mono_legato.au  m2_mono_priority.au  m2_retrig_never.au  m3_control_feedback.au  m3_rate_modes.au  m4_archetype_bank.au  (+24 more)
(+37 files in other folders)
